package com.swust.zhengxin.puzzle.Module;


import com.swust.zhengxin.puzzle.R;

public class ImageSource {
    public static final int[] imagesource={
            R.mipmap.default0,
            R.mipmap.default1,
            R.mipmap.default2,
            R.mipmap.default3,
            R.mipmap.default4,
            R.mipmap.default5,
            R.mipmap.default6,
            R.mipmap.default7,
            R.mipmap.default8,
            R.mipmap.default9,
            R.mipmap.default10,
            R.mipmap.default11,
            R.mipmap.default12,
            R.mipmap.default13
    };
}

